# htmlparse

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/htmlparse/: __init__.py  html.py
